@@ -4,6 +4,7 @@ Version 4.4.0
 - [PATCH] Update common @11.0.0
 - [MINOR] Support CIAM Authority Type (#1783)
 - [MINOR] Bumping YubiKit Versions to 2.2.0 (#1784)
+- [MINOR] Changes to support MSA accounts in Broker (#1793)
 
 Version 4.3.1
 ----------
